samples/_failures_safe/1761219214_64ca94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30b6e6f9.c: In function ‘main’:
./samples/SAFE/__tmp_30b6e6f9.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_30b6e6f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30b6e6f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30b6e6f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30b6e6f9.c:153:17: error: expected declaration or statement at end of input
